src/test/deca/syntax/invalid/lvalue.deca
// Description:
// 	assign value
//
// Result:
// left-hand side of assignment is not an lvalue

{
    int x;
    1 = x;
}

